# dftools

./: .env  Cargo.toml  Dockerfile  README.md  dftools_secret.sh  docker-compose.yml  docker.env  flake.nix  todo.md
.sqlx/: query-09fd663925a6f55f14737cf505766efffc1a85ac8fcc141cdbdc79d57c2ae576.json  query-1adee2251032fb196ecfb10162cfe7cf54adc42d1f18a19569bdb2c9ad60ba16.json  query-25ea5721526bf8fee8a8a1a1dcf9c7b17f5a341886dd69f02b1b2313b348a8d5.json  query-56ed989b8c290ffed3362a7be6b6387684204217859319db0639c73a7a51ec54.json  query-68b89577c4d68fe132aa3d551ed6d68bb2b2102c1275d39e82db6ba79d61bdc8.json  query-7f8d17c1a2d74c68db2b7bb07ee7a320dad81f8325cccb67683760e4f11fda43.json  query-9087cedcc4676685effe7ee92c08a4099c6574d48686ba290f744ae949cb9d15.json  query-be157431fdcaf6c12ec9ec17e35f07b3a129e56ae9cea60c5aab30267bc402ee.json  query-f001e92a45b2cd0a4f37343102aeb782c07e625109276e42545e0e22eb3ba794.json  query-f25bf7ec6b7771d652806fac60aee34376556ee0270763068e24b604d0e68c98.json  query-f86a0bd38898c244b27c7ba86f44ad8a9105015240762ecd2584689bc2385f6c.json
docs/: auth.md  baton.md  instance.md  xplot.md
migrations/: 20250511022306_plot.down.sql  20250511022306_plot.up.sql  20250511024511_baton_trust.down.sql  20250511024511_baton_trust.up.sql  20250514014618_key.up.sql  20250516081805_known_instance.down.sql  20250516081805_known_instance.up.sql
src/: dfjson.rs  instance.rs  main.rs
src/api/: auth.rs  baton.rs  instance.rs  mod.rs
src/store/: baton.rs  external.rs  instance.rs  mod.rs
