[package]
name = "dftools"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
ascii_domain = { version = "0.6.4", features = ["serde"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["now"] }
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
envy = "0.4.2"
hmac = "0.12.1"
futures = "0.3.31"
jwt = "0.16.0"
lazy_static = "1.5.0"
poem = { version = "3.1.7", features = ["session"] }
poem-openapi = { version = "5.1.5", features = ["swagger-ui"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid" ] }
rand = "0.9.0"
redis = { version = "0.29.1", features = ["tokio-comp", "uuid"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
reqwest = "0.12.15"
serde_json = "1.0.140"
redis-macros = "0.5.3"
